Fixed misaligned LIDAR Feed Panel

--- a/src/lmcc/public/css/right.css
+++ b/src/lmcc/public/css/right.css
@@ -530,7 +530,7 @@
 #panel_rover_lidar {
 	bottom: 0%;
 	top: 50%;
-	left: 33%;
+	left: 33.5%;
 	height: 50%;
 	width: 33.5%;
 	/* background-color: #88c; */
